[package]
name = "blaze-ssl-async"
version = "0.3.7"
edition = "2021"
description = "Legacy SSLv3 bare minimum implementation"
license = "MIT"
authors = ["Jacobtread <jacobtread@gmail.com>"]
repository = "https://github.com/jacobtread/blaze-ssl-async"
readme = "README.md"
keywords = ["EA", "ssl", "sslv3", "async"]
categories = ["network-programming", "parser-implementations"]

[dependencies]
x509-cert = "0.1.0"
tokio = { version = "1", features = ["io-util", "net"] }
rsa = "0.8"
bytes = "1.5.0"

[dev-dependencies.tokio]
version = "1"
features = ["rt", "macros", "time"]
