[package]
name = "blaze-ssl-async"
version = "0.4.0"
edition = "2021"
description = "Legacy SSLv3 bare minimum implementation"
license = "MIT"
authors = ["Jacobtread <jacobtread@gmail.com>"]
repository = "https://github.com/jacobtread/blaze-ssl-async"
readme = "README.md"
keywords = ["EA", "ssl", "sslv3", "async"]
categories = ["network-programming", "parser-implementations"]

[dependencies]
x509-cert = { version = "0.2", default-features = false, features = ["std"] }
tokio = { version = "1", features = ["io-util", "net"] }
rsa = "0.9"
bytes = "1"
num_enum = "0.7"

[dev-dependencies.tokio]
version = "1"
features = ["rt", "rt-multi-thread", "macros", "time"]
